just wrote a paragraph on noodles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <h1>BANGTAN</h1>
     <p>Attack on bangtan is the opening of the best band.</p>
+    <p>chicken noodle soup with sauna on the side</p>
     <img src="kk.jpeg" width="200vh" />
   </body>
 </html>
